# postgres-compare

./: .gitignore  LICENSE  README.md  compare.py  config.example.json  postgres.py  pyproject.toml  utils.py
